chapter19/kuard-pod-securitycontext.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  containers:
    - name: kuard
      image: gcr.io/kuar-demo/kuard-amd64:blue
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        privileged: false
      ports:
        - name: http
          containerPort: 8080
          protocol: TCP
