chapter19/kuard-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: kuard-networkpolicy
  name: kuard
  labels:
    app: kuard
spec:
  containers:
    - image: gcr.io/kuar-demo/kuard-amd64:blue
      name: kuard
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
