chapter19/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: kuard-networkpolicy
  name: default-deny-ingress 
spec:
  podSelector: {}
  policyTypes:
  - Ingress
